Add company UUID to REST routes and entity mappers
