# internal/api/v1/routes.go
@@ -24,14 +24,17 @@ func InstallRoutes(router *gin.Engine, server *Server) {
 	api.GET("/docs/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 
 	// Users
-	api.GET("/users", server.GetUsers)
-	api.GET("/users/:id", server.GetUser)
-	api.POST("/users", server.CreateUser)
-	api.DELETE("/users/:id", server.DeleteUser)
+	api.GET("/:company/users", server.GetUsers)
+	api.GET("/:company/users/:id", server.GetUser)
+	api.POST("/:company/users", server.CreateUser)
+	api.DELETE("/:company/users/:id", server.DeleteUser)
 
 	// Products
-	api.GET("/products", server.GetProducts)
-	api.GET("/products/:id", server.GetProduct)
-	api.POST("/products", server.CreateProduct)
-	api.DELETE("/products/:id", server.DeleteProduct)
+	api.GET("/:company/products", server.GetProducts)
+	api.GET("/:company/products/:id", server.GetProduct)
+	api.POST("/:company/products", server.CreateProduct)
+	api.DELETE("/:company/products/:id", server.DeleteProduct)
+
+	// Tenant
+	
 }
